# egraph-rs

./: Cargo.toml
crates/algorithm/connected-components/: Cargo.toml
crates/algorithm/layering/: Cargo.toml
crates/algorithm/shortest-path/: Cargo.toml
crates/algorithm/triangulation/: Cargo.toml
crates/cli/: Cargo.toml
crates/clustering/: Cargo.toml
crates/clustering/src/algorithms/: label_propagation.rs
crates/dataset/: Cargo.toml
crates/drawing/: Cargo.toml
crates/edge-bundling/fdeb/: Cargo.toml
crates/layout/kamada-kawai/: Cargo.toml
crates/layout/kernel-sgd/: Cargo.toml
crates/layout/kernel-sgd/src/: chebyshev.rs  diffusion_kernel.rs  distance.rs  hutchinson.rs  kernel_sgd.rs  lib.rs  power_method.rs
crates/layout/mds/: Cargo.toml
crates/layout/omega/: Cargo.toml
crates/layout/omega/src/: lib.rs  omega.rs
crates/layout/overwrap-removal/: Cargo.toml
crates/layout/separation-constraints/: Cargo.toml
crates/layout/separation-constraints/examples/: dependency_graph_layered.rs  lesmis_cluster_overlap.rs
crates/layout/sgd/: Cargo.toml
crates/layout/sgd/src/: sparse_sgd.rs
crates/layout/stress-majorization/: Cargo.toml
crates/linalg/rdmds/: Cargo.toml
crates/linalg/rdmds/src/: eigenvalue.rs  lib.rs
crates/linalg/spmv/: Cargo.toml
crates/linalg/spmv/src/: lib.rs  sparse_symmetric_matrix.rs
crates/python/: Cargo.toml
crates/python/src/: rng.rs
crates/python/src/layout/sgd/: diffusion_kernel.rs  kernel_sgd.rs  mod.rs
crates/python/tests/: test_diffusion_kernel.py  test_kernel_sgd.py
crates/quality-metrics/: Cargo.toml
crates/wasm/: Cargo.toml
crates/wasm/.cargo/: config.toml
crates/wasm/src/: rng.rs
memory-bank/: activeContext.md  progress.md  systemPatterns.md
