[package]
name = "egraph-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
argparse = "0.2.2"
petgraph = "0.8"
petgraph-algorithm-shortest-path = { path = "../algorithm/shortest-path" }
petgraph-drawing = { path = "../drawing" }
petgraph-layout-omega = { path = "../layout/omega" }
petgraph-layout-sgd = { path = "../layout/sgd" }
petgraph-linalg-rdmds = { path = "../linalg/rdmds" }
petgraph-quality-metrics = { path = "../quality-metrics" }
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
