[package]
name = "petgraph-layout-kernel-sgd"
version = "0.1.0"
edition = "2021"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
license = "MIT"
description = "Kernel-based SGD layout algorithm using diffusion kernel approximation"
repository = "https://github.com/likr/egraph-rs"

[dependencies]
ndarray = "0.16"
num-traits = "0.2"
petgraph = "0.6"
petgraph-drawing = { path = "../../drawing" }
petgraph-layout-sgd = { path = "../sgd" }
petgraph-linalg-spmv = { path = "../../linalg/spmv" }
rand = "0.10"
