[package]
name = "petgraph-layout-omega"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.16"
petgraph = "0.8"
petgraph-drawing = { path = "../../drawing" }
petgraph-layout-sgd = { path = "../sgd" }
rand = "0.8"

[dev-dependencies]
petgraph-linalg-rdmds = { path = "../../linalg/rdmds" }
