[package]
name = "petgraph-linalg-spmv"
version = "0.1.0"
edition = "2021"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
license = "MIT"
description = "Sparse symmetric matrix-vector product implementation"
repository = "https://github.com/likr/egraph-rs"

[dependencies]
ndarray = "0.16"
num-traits = "0.2"
